<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    tools:context=".RegisterFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/registerRootLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imgLoginLogo"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/loginlogo"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full" />

            <LinearLayout
                android:id="@+id/llTextGrp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgLoginLogo">

                <TextView
                    android:id="@+id/txtAppConnect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/app_connect"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/txtWelcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/create_account"
                    android:textColor="@color/white"
                    android:textSize="22sp" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/email"
                android:textColorHint="#CCCCCC"
                app:boxStrokeColor="@color/white"
                app:hintTextColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/llTextGrp"
                app:startIconDrawable="@drawable/username_24"
                app:startIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#CCCCCC" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/username"
                android:textColorHint="#CCCCCC"
                app:boxStrokeColor="@color/white"
                app:hintTextColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/tilEmail"
                app:startIconDrawable="@drawable/username_24"
                app:startIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#CCCCCC" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/password"
                android:textColorHint="#CCCCCC"
                app:boxStrokeColor="@color/white"
                app:endIconDrawable="@drawable/password_toggle"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/white"
                app:hintTextColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/tilUsername"
                app:startIconDrawable="@drawable/password_24"
                app:startIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#CCCCCC" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilConfirmPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/confirm_password"
                android:textColorHint="#CCCCCC"
                app:boxStrokeColor="@color/white"
                app:endIconDrawable="@drawable/password_toggle"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/white"
                app:hintTextColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/tilPass"
                app:startIconDrawable="@drawable/password_24"
                app:startIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etConfirmPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#CCCCCC" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/btn_rounded_primary"
                android:enabled="false"
                android:text="@string/register"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:backgroundTint="@null"
                app:layout_constraintTop_toBottomOf="@id/tilConfirmPass" />

            <TextView
                android:id="@+id/txtOtherLoginMethod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/or_log_in_with"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnRegister" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/sivGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="48dp"
                app:layout_constraintTop_toBottomOf="@id/txtOtherLoginMethod">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/sivGoogle"
                    style="@style/btn_white_ring"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="Google"
                    android:src="@drawable/google"
                    app:contentPadding="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/sivFacebook"
                    style="@style/btn_white_ring"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="Facebook"
                    android:src="@drawable/facebook"
                    app:contentPadding="10dp"
                    app:layout_constraintEnd_toStartOf="@id/sivGithub"
                    app:layout_constraintStart_toEndOf="@id/sivGoogle"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/sivGithub"
                    style="@style/btn_white_ring"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="GitHub"
                    android:src="@drawable/github"
                    app:contentPadding="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/already_have_an_account_log_in"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sivGroup" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>