<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/registerRootLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imgLoginLogo"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/logo"
                android:contentDescription="@string/loginlogo"
                android:layout_marginTop="10dp"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <LinearLayout
                android:id="@+id/llTextGrp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"

                app:layout_constraintTop_toBottomOf="@id/imgLoginLogo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >

                <TextView
                    android:id="@+id/txtAppConnect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_connect"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:layout_marginTop="5dp"/>


                <TextView
                    android:id="@+id/txtWelcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_account"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:layout_marginTop="20dp"/>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/email"
                app:hintTextColor="@color/primary"
                app:boxStrokeColor="@color/primary"

                app:layout_constraintTop_toBottomOf="@id/llTextGrp"
                app:startIconDrawable="@drawable/username_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/username"
                app:hintTextColor="@color/primary"
                app:boxStrokeColor="@color/primary"

                app:layout_constraintTop_toBottomOf="@id/tilEmail"
                app:startIconDrawable="@drawable/username_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:startIconDrawable="@drawable/password_24"
                app:endIconDrawable="@drawable/password_toggle"
                app:endIconMode="password_toggle"
                app:boxStrokeColor="@color/primary"
                app:hintTextColor="@color/primary"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"


                app:layout_constraintTop_toBottomOf="@id/tilUsername">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:ellipsize="end"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilConfirmPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                app:startIconDrawable="@drawable/password_24"
                app:endIconDrawable="@drawable/password_toggle"
                app:endIconMode="password_toggle"
                app:boxStrokeColor="@color/primary"
                app:hintTextColor="@color/primary"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"


                app:layout_constraintTop_toBottomOf="@id/tilPass">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:ellipsize="end"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/register"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:background="@drawable/btn_rounded_primary"
                app:backgroundTint="@null"

                app:layout_constraintTop_toBottomOf="@id/tilConfirmPass"/>

            <TextView
                android:id="@+id/txtOtherLoginMethod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or_log_in_with"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_marginTop="30dp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnRegister"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/sivGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:padding="10dp"

                app:layout_constraintTop_toBottomOf="@id/txtOtherLoginMethod"
                >

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/sivGoogle"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/google"
                    style="@style/btn_white_ring"
                    app:contentPadding="10dp"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/sivFacebook"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/facebook"
                    style="@style/btn_white_ring"
                    app:contentPadding="10dp"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="@id/sivGoogle"
                    app:layout_constraintEnd_toEndOf="@id/sivGithub"
                    />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/sivGithub"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/github"
                    style="@style/btn_white_ring"
                    app:contentPadding="10dp"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginTop="50dp"

                app:layout_constraintTop_toBottomOf="@id/sivGroup"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>